frontend/src/components/01-Reusable/ImageCarousel/Carousel.css
:root {
  --dark-pink: #bd00ff;
  --light-pink: #eaddff;
  --slick-arrow: 2rem;
  --slick-dot: 1.5rem;
  --slick-opacity: 0.6;
}

.slick-slider {
  margin-bottom: calc(var(--slick-dot) * 2);
}

.slick-slide {
  text-align: center;
}

.slick-list {
  margin: auto;
}

.slick-prev {
  left: calc(-2rem - 5px);
}

.slick-next {
  right: calc(-2rem - 5px);
}

.slick-arrow,
.slick-prev,
.slick-next {
  width: var(--slick-arrow);
  height: var(--slick-arrow);
}

.slick-arrow::before,
.slick-prev::before,
.slick-next::before {
  color: var(--dark-pink);
  font-size: var(--slick-arrow);
  opacity: var(--slick-opacity);
}

.slick-slide-item img {
  aspect-ratio: 16 / 9;
}

.slick-slide-item img {
  width: 60vw;
  object-fit: cover;
  display: inline-block;
}

.slick-dots {
  margin: calc(var(--slick-dot) / 4) auto;
  bottom: auto;
}

.slick-dots li {
  margin: 0 calc(var(--slick-dot) / 1.5);
}

.slick-dots li button:focus-visible {
  outline-color: black;
  outline-style: solid;
  outline-width: 2px;
}

.slick-dots li button::before {
  font-size: var(--slick-dot);
  color: var(--light-pink);
  opacity: 1;
}

.slick-dots li.slick-active button::before {
  font-size: var(--slick-dot);
  color: var(--dark-pink);
  opacity: var(--slick-opacity);
}

@media only screen and (max-width: 600px) {
  .slick-slide-item img {
    min-height: 200px;
    object-fit: cover;
  }
  .slick-dots {
    display: none;
    visibility: hidden;
  }
}

@media only screen and (max-width: 400px) {
  .slick-arrow,
  .slick-prev,
  .slick-next {
    width: var(--slick-arrow);
    height: var(--slick-arrow);
  }
}

@media only screen and (max-width: 1500px) {
  .slick-arrow,
  .slick-prev,
  .slick-next {
    width: 14rem;
  }
}

@media only screen and (max-width: 1000px) {
  .slick-arrow,
  .slick-prev,
  .slick-next {
    width: 8rem;
  }
}

@media only screen and (max-width: 500px) {
  .slick-arrow,
  .slick-prev,
  .slick-next {
    width: 4rem;
  }
}

